# simplegistyc

./: LICENSE  PKG-INFO  README.md  pyproject.toml  setup.py  simplegistyc.py
