[tool.poetry]
name = "simplegistyc"
version = "0.1.0"
description = "simplegistyc allows you to create a gist without a file"
authors = ["FORT <vovarod023@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
